# sits_multisen

./: .gitignore  README.md  main.py  main_analyses.py  main_dataset.py  pyproject.toml
config/: hydra_config.yaml
src/analyses/: inter_channel_correlation.py  plot_cmap.py  temporal_autocorrelation.py
src/dataset/: creation.py  min_max_calcul.py
src/utils/: utils.py
